@@ -1,3 +1,11 @@
+2007-02-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	Fix ddb's trace command.
+	* i386/i386/db_trace.c (db_find_trace_symbols): Drop _ prefix on ELF
+	targets.
+	(db_i386_stack_trace): Check that adresses of known functions were
+	really found.
+
 2007-02-19  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile.am (gnumach_LINKFLAGS): New variable.
